force-app/main/default/objects/GhostDraftLog__c/GhostDraftLog__c.object-meta.xml
<CustomObject>
    <label>Ghost Draft Log</label>
    <nameField>
        <displayFormat>GD-{000000}</displayFormat>
        <label>GroshtDraftLog Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ghost Draft Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>