force-app/main/default/objects/GhostDraftLog__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Ghost Draft Logs</relationshipLabel>
    <relationshipName>Ghost_Draft_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>