force-app/main/default/objects/GhostDraftLog__c/fields/HoL_Count__c.field-meta.xml
<CustomField>
    <fullName>HoL_Count__c</fullName>
    <label>HoL Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>