force-app/main/default/objects/GhostDraftLog__c/fields/ScheduleofLosses__c.field-meta.xml
<CustomField>
    <fullName>ScheduleofLosses__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Schedule of Losses</label>
    <referenceTo>Schedule_of_Losses__c</referenceTo>
    <relationshipLabel>Ghost Draft Logs</relationshipLabel>
    <relationshipName>Ghost_Draft_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>