force-app/main/default/objects/GhostDraftLog__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <length>56</length>
    <type>Text</type>
</CustomField>